# chat.rs

./: .gitignore
backend/: Cargo.toml
backend/src/: main.rs  state.rs
client/: .env  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  types.d.ts
client/src/: types.ts
client/src/app/: globals.css  page.tsx
client/src/app/components/: ChatRoom.tsx  Message.tsx  Sidebar.tsx
