[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- Async
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
futures-util = "0.3.3"
# -- ID
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Web
axum = {version = "0.7.4", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tower-cookies = "0.10"
# -- Sockets
socketioxide = { version = "0.12.0", features = ["extensions", "state"] }
# -- Time
chrono = { version = "0.4", features = ["serde"] }
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-extra = "0.9.2"
